--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -459,7 +459,7 @@
                                         <TextBox Height="49" x:Name="txtItemReason" TextWrapping="Wrap" Visibility="Hidden" Text="Please type other Reason" Canvas.Top="451" Width="950" Canvas.Left="0" KeyDown="txtItemReason_KeyDown" GotFocus="txtItemReason_GotFocus"/>
                                         <TextBlock Canvas.Left="490" TextWrapping="Wrap" Text="" Visibility="Hidden" Canvas.Top="11" Height="30" Width="112" x:Name="txtSKUname"/>
                                     </Canvas>
-                                    <ListBox x:Name="lstSKU"  Height="206" Canvas.Left="2" Canvas.Top="110" Width="181" Visibility="Hidden" SelectionChanged="lstSKU_SelectionChanged" />
+                                    <ListBox x:Name="lstSKU" FontSize="30" Height="250" Canvas.Left="123" Canvas.Top="77" Width="471" Visibility="Hidden" SelectionChanged="lstSKU_SelectionChanged" />
                                 </Canvas>
                             </Border>
 
