--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="KrausRGA.UI.wndAppSetting"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit" x:Class="KrausRGA.UI.wndAppSetting"
         Title="Application Setting" Height="1200" Width="800" WindowState="Maximized" Loaded="Window_Loaded" >
     <Viewbox>
         <Grid Margin="0,3,2,5" Height="1200" Width="798" Background="#FFC7C7C7">
@@ -12,7 +13,7 @@
                     </Border>
                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="356" Height="52" Width="174" Canvas.Left="8" >
                         <StackPanel Orientation="Horizontal" Margin="0,-1,0,1">
-                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnlogout_Click" Width="52"></Image>
+                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnlogout_Click" Width="52"/>
                             <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="OK" Margin="-1,-2,-1,-1" Click="btnlogout_Click" Width="103"/>
                         </StackPanel>
                     </Border>
@@ -22,7 +23,7 @@
             <TextBlock Text="A" HorizontalAlignment="Left" Margin="447,166,0,0" VerticalAlignment="Top" Style="{StaticResource tbFormTitle}" Foreground="Black" />
             <Label Content="Header Font" HorizontalAlignment="Left" Margin="98,166,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
             <Label Content="Control Font" HorizontalAlignment="Left" Margin="99,231,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20"/>
-            <Label Content="A" Name="lblcontrolfont" HorizontalAlignment="Left" Margin="285,225,0,0" VerticalAlignment="Top" FontSize="22" />
+            <Label Content="A" x:Name="lblcontrolfont" HorizontalAlignment="Left" Margin="285,225,0,0" VerticalAlignment="Top" FontSize="22" />
             <Label Content="A" HorizontalAlignment="Left" Margin="445,231,0,0" VerticalAlignment="Top" Style="{StaticResource lblVeriable}" />
             <Label Content="Label Font" HorizontalAlignment="Left" Margin="113,288,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
             <Label Content="A" x:Name="lblcontrolfont_Copy" HorizontalAlignment="Left" Margin="288,287,0,0" VerticalAlignment="Top" FontSize="20" />
