--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KrausRGA.UI.wndNewRMANumber"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="New RMA Number" Height="1280" Width="800" Loaded="Window_Loaded_1" WindowState="Maximized">
+        Title="New RMA Number" Height="1280"  Icon="/KrausRGA;component/Images/RGAICO.ico"  Width="800" Loaded="Window_Loaded_1" WindowState="Maximized">
     <Viewbox>
         <Grid Height="1280" Width="800">
             <Border BorderThickness="2" BorderBrush="#FFD49919">
@@ -124,7 +124,7 @@
 											HorizontalGridLinesBrush="#FF575757" 
 											VerticalGridLinesBrush="Gray"
 											Height="289"  
-											 Canvas.Top="38">
+											 Canvas.Top="38" SelectionChanged="dgPackageInfo_SelectionChanged_1">
 
                                         <DataGrid.Resources>
                                             <Style x:Key="HeaderStyleKey" TargetType="{x:Type DataGridColumnHeader}">
@@ -179,7 +179,7 @@
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
                                                         <ScrollViewer x:Name="svScrollImages" Width="250" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Height="60">
-                                                            <ContentControl >
+                                                            <ContentControl MouseLeftButtonDown="ContentControl_MouseLeftButtonDown_1">
                                                                 <StackPanel x:Name="spProductImages" Background="#FFA4A4A4" Orientation="Horizontal" />
                                                             </ContentControl>
                                                         </ScrollViewer>
