--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -126,7 +126,7 @@
 											HorizontalGridLinesBrush="#FF575757" 
 											VerticalGridLinesBrush="Gray"
 											Height="289"  
-											 Canvas.Top="38" SelectionChanged="dgPackageInfo_SelectionChanged_1">
+											 Canvas.Top="38" SelectionChanged="dgPackageInfo_SelectionChanged_1" MouseDoubleClick="dgPackageInfo_MouseDoubleClick_1">
 
                                         <DataGrid.Resources>
                                             <Style x:Key="HeaderStyleKey" TargetType="{x:Type DataGridColumnHeader}">
@@ -412,36 +412,19 @@
 													HorizontalGridLinesBrush="#FF272626" VerticalGridLinesBrush="{x:Null}" 
 													Background="#FFE6E6E6" Width="500" GridLinesVisibility="None" RowHeight="45" Canvas.Top="46" ScrollViewer.HorizontalScrollBarVisibility="Hidden" >
                                             <DataGrid.Columns >
-
-                                                <!--<DataGridTemplateColumn Header="" Width="50"  >
-                                                        <DataGridTemplateColumn.CellStyle>
-                                                            <Style TargetType="{x:Type DataGridCell}">
-                                                                <Setter Property="Margin" Value="0,0,0,0"/>
-                                                            <Setter Property="Width" Value="0"/>
-                                                            <Setter Property="VerticalContentAlignment" Value="Center"/>
-                                                            </Style>
-                                                        </DataGridTemplateColumn.CellStyle>
-                                                        <DataGridTemplateColumn.CellTemplate>
-                                                            <DataTemplate>
-                                                            <Canvas x:Name="cvReasons" Background="#FF919191" Visibility="Hidden" >
-                                                                  
-                                                                </Canvas>
-                                                            </DataTemplate>
-                                                        </DataGridTemplateColumn.CellTemplate>
-                                                    </DataGridTemplateColumn>-->
-                                                <DataGridTemplateColumn Header="Reasons" Width="500">
+                                                <DataGridTemplateColumn Header="Reasons" Width="500" >
                                                     <DataGridTemplateColumn.CellStyle>
                                                         <Style TargetType="{x:Type DataGridCell}">
-                                                            <Setter Property="Margin" Value="5,5,5,5"/>
+                                                            <Setter Property="Margin" Value="2,2,2,2"/>
                                                             <Setter Property="VerticalContentAlignment" Value="Center"/>
                                                         </Style>
                                                     </DataGridTemplateColumn.CellStyle>
                                                     <DataGridTemplateColumn.CellTemplate>
-                                                        <DataTemplate>
-                                                            <ContentControl x:Name="ctlReasons" MouseDown="ctlReasons_MouseDown_1"  >
-                                                                <Border Name="bdrCheck" BorderBrush="#FF0F0F0F" BorderThickness="0,1,1,1" Background="#FF919191" CornerRadius="3" Height="160" Margin="10,0,0,0" >
+                                                        <DataTemplate  >
+                                                            <ContentControl x:Name="ctlReasons" MouseDown="ctlReasons_MouseDown_1" >
+                                                                <Border Name="bdrCheck" BorderBrush="#FF0F0F0F" BorderThickness="1,1,1,1"  Background="#FF919191" CornerRadius="0" Height="100" Margin="0,0,0,0" >
                                                                     <Canvas Margin="0,0,0,0">
-                                                                        <TextBlock x:Name="tbReason" Text="{Binding Reason1}" TextWrapping="WrapWithOverflow" Margin="10,0,0,0" FontSize="20" Foreground="WhiteSmoke"/>
+                                                                        <TextBlock x:Name="tbReason" Text="{Binding Reason1}" TextWrapping="WrapWithOverflow" Margin="10,0,0,0" FontSize="25"  Width="500" Foreground="WhiteSmoke"/>
                                                                         <CheckBox x:Name="cbReasons" Width="0" Content="" Canvas.Top="4" Canvas.Left="2" Visibility="Hidden" />
                                                                     </Canvas>
                                                                 </Border>
