--- a/KrausxRGA/UI/wndCamera.xaml
+++ b/KrausxRGA/UI/wndCamera.xaml
@@ -12,16 +12,8 @@
         <Border Height="1260" Width="800">
             <Canvas>
                 <Canvas Height="90" Canvas.Top="1170" Width="800" Background="#B2C1C1C1">
-                    <Border x:Name="btnClose" Visibility="Visible" MouseDown="Image_MouseDown_1"  CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="674" Width="91" Height="80" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" >
-                        <Border.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform/>
-                                <SkewTransform/>
-                                <RotateTransform Angle="-0"/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </Border.RenderTransform>
-                        <Image Style="{StaticResource btnImage}" Stretch="Fill" Source="/KrausRGA;component/Images/icoLogout.png" RenderTransformOrigin="0.807,0.821" Width="Auto" Margin="23,17,26,21" />
+                    <Border x:Name="btnClose" Visibility="Visible" MouseDown="Image_MouseDown_1" CornerRadius="50"  Style="{StaticResource bdrWin8btn}" Canvas.Left="674" Width="99" Height="87" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" >
+                            <TextBlock Text="Close" Foreground="WhiteSmoke" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="6,12,6,24"/>
                     </Border>
                 </Canvas>
                 <Canvas x:Name="cvsCamera" Height="1070" Width="800" Background="#FF26807B" Margin="0,100,0,0">
@@ -86,7 +78,7 @@
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Border.RenderTransform>
-                        <Image Style="{StaticResource btnImage}"  Stretch="Fill" Source="/KrausRGA;component/Images/icoCam.png" RenderTransformOrigin="0.807,0.821" Width="Auto" Margin="25,17,27,26" />
+                        <Image Style="{StaticResource btnImage}"  Stretch="Fill" Source="/KrausRGA;component/Images/icoCam.png" RenderTransformOrigin="0.807,0.821" Width="Auto" Margin="26,19,28,29" />
                     </Border>
                   
                     <Border x:Name="btnScan" Visibility="Visible" MouseDown="Image_MouseDown_3" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="321" Canvas.Top="87" Width="107" Height="103" RenderTransformOrigin="0.5,0.5" >
@@ -98,7 +90,7 @@
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Border.RenderTransform>
-                        <Image Style="{StaticResource btnImage}" Stretch="Fill" Source="/KrausRGA;component/Images/icoScan.png" RenderTransformOrigin="0.807,0.821" Width="Auto" Margin="31,31,30,32" />
+                        <Image Style="{StaticResource btnImage}" Stretch="Fill" Source="/KrausRGA;component/Images/icoScan.png" RenderTransformOrigin="0.807,0.821" Width="Auto" Margin="28,28,26,30" />
                     </Border>
                 </Canvas>
                 <Border x:Name="bdrPreview" Visibility="Hidden" BorderBrush="Transparent" BorderThickness="0" Height="1070" Canvas.Left="0" Width="800">
