--- a/KrausxRGA/UI/wndNewRMANumber.xaml
+++ b/KrausxRGA/UI/wndNewRMANumber.xaml
@@ -112,7 +112,7 @@
 											SelectionMode="Extended" 
 											HorizontalAlignment="Center" 
 											VerticalAlignment="Center"
-											Width="839" 
+											Width="790" 
 											ScrollViewer.CanContentScroll="False" 
 											ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
 											ScrollViewer.VerticalScrollBarVisibility="Auto" 
@@ -125,8 +125,8 @@
 											BorderBrush="{x:Null}" 
 											HorizontalGridLinesBrush="#FF575757" 
 											VerticalGridLinesBrush="Gray"
-											Height="289"  
-											 Canvas.Top="43" SelectionChanged="dgPackageInfo_SelectionChanged_1" MouseDoubleClick="dgPackageInfo_MouseDoubleClick_1" >
+											Height="294"  
+											 Canvas.Top="38" SelectionChanged="dgPackageInfo_SelectionChanged_1" MouseDoubleClick="dgPackageInfo_MouseDoubleClick_1" >
 
                                         <DataGrid.Resources>
                                             <Style x:Key="HeaderStyleKey" TargetType="{x:Type DataGridColumnHeader}">
@@ -192,7 +192,7 @@
 
                                             <DataGridTemplateColumn Header="Reasons" 
 													HeaderStyle="{StaticResource HeaderStyleKey}"
-													Width="*" >
+													Width="180" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate>
                                                         <ContentControl x:Name="cntItemStatus" MouseLeftButtonDown="cntItemStatus_MouseLeftButtonDown">
@@ -204,10 +204,7 @@
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellTemplate>
                                             </DataGridTemplateColumn>
-                                            <DataGridTemplateColumn  
-													Header="" Width="0"
-													 >
-
+                                            <DataGridTemplateColumn  Header="" Width="0">
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate>
                                                         <StackPanel x:Name="spcat" >
@@ -216,173 +213,8 @@
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellTemplate>
                                             </DataGridTemplateColumn>
-
-
-
                                         </DataGrid.Columns>
                                     </DataGrid>
-                                    <!--<Border x:Name="bdrCamera" Visibility="Visible" Canvas.Top="77" Height="349" Width="504" >
-                                        <Border.Style>
-                                            <Style TargetType="{x:Type Border}">
-                                                <Style.Triggers>
-                                                    <Trigger Property="Visibility" Value="Hidden">
-                                                        <Trigger.EnterActions>
-                                                            <BeginStoryboard>
-                                                                <Storyboard>
-                                                                    <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="0"  To="-1500"/>
-                                                                </Storyboard>
-                                                            </BeginStoryboard>
-                                                        </Trigger.EnterActions>
-                                                    </Trigger>
-                                                    <Trigger Property="Visibility" Value="Visible">
-                                                        <Trigger.EnterActions>
-                                                            <BeginStoryboard>
-                                                                <Storyboard>
-                                                                    <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.8" From="-1500"  To="10"/>
-                                                                </Storyboard>
-                                                            </BeginStoryboard>
-                                                        </Trigger.EnterActions>
-                                                    </Trigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </Border.Style>
-                                        <Canvas x:Name="cnCamera" Visibility="Visible"  Background="#B2323232" Margin="0,0,-152,-93" >
-                                            <cam:Webcam x:Name="WebCamCtrl"  Background="#FF3A3939" BorderBrush="#FF3C3C3C" BorderThickness="2" Height="390" Canvas.Left="119" Width="500" Canvas.Top="12"/>
-                                            <Border x:Name="bdrStop" Visibility="Visible" BorderBrush="Black" BorderThickness="0" Height="81" Canvas.Top="24" Width="88" CornerRadius="10" Canvas.Left="-147">
-                                                <Border.Style>
-                                                    <Style TargetType="{x:Type Border}">
-                                                        <Style.Triggers>
-                                                            <Trigger Property="Visibility" Value="Hidden">
-                                                                <Trigger.EnterActions>
-                                                                    <BeginStoryboard>
-                                                                        <Storyboard>
-                                                                            <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="10"  To="-90"/>
-                                                                        </Storyboard>
-                                                                    </BeginStoryboard>
-                                                                </Trigger.EnterActions>
-                                                            </Trigger>
-                                                            <Trigger Property="Visibility" Value="Visible">
-                                                                <Trigger.EnterActions>
-                                                                    <BeginStoryboard>
-                                                                        <Storyboard>
-                                                                            <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-90"  To="10"/>
-                                                                        </Storyboard>
-                                                                    </BeginStoryboard>
-                                                                </Trigger.EnterActions>
-                                                            </Trigger>
-                                                        </Style.Triggers>
-                                                    </Style>
-                                                </Border.Style>
-                                                <Canvas Margin="0,0,-10,-10"  >
-                                                    <Button x:Name="btnStop" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0" Height="71" Width="88" Click="btnStop_Click">
-                                                        <Button.Background>
-                                                            <ImageBrush ImageSource="/KrausRGA;component/Images/Stopicon.png"/>
-                                                        </Button.Background>
-                                                        <Button.Foreground>
-                                                            <ImageBrush ImageSource="/KrausRGA;component/Images/Stopicon.png"/>
-                                                        </Button.Foreground>
-                                                    </Button>
-                                                    <TextBlock x:Name="tbkStop" Text="Stop Camera" HorizontalAlignment="Center" Height="19" Width="88" Canvas.Top="62" Foreground="White" FontSize="15"/>
-                                                </Canvas>
-                                            </Border>
-                                            <Canvas Height="228" Width="112" Canvas.Top="-2">
-                                                <Border x:Name="bdrCapture" Visibility="Visible" BorderBrush="Black" BorderThickness="0" Height="81" Canvas.Top="144" Width="83" CornerRadius="10" Canvas.Left="-124">
-                                                    <Border.Style>
-                                                        <Style TargetType="{x:Type Border}">
-                                                            <Style.Triggers>
-                                                                <Trigger Property="Visibility" Value="Hidden">
-                                                                    <Trigger.EnterActions>
-                                                                        <BeginStoryboard>
-                                                                            <Storyboard>
-                                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="10"  To="-90"/>
-                                                                            </Storyboard>
-                                                                        </BeginStoryboard>
-                                                                    </Trigger.EnterActions>
-                                                                </Trigger>
-                                                                <Trigger Property="Visibility" Value="Visible">
-                                                                    <Trigger.EnterActions>
-                                                                        <BeginStoryboard>
-                                                                            <Storyboard>
-                                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-90"  To="10"/>
-                                                                            </Storyboard>
-                                                                        </BeginStoryboard>
-                                                                    </Trigger.EnterActions>
-                                                                </Trigger>
-                                                            </Style.Triggers>
-                                                        </Style>
-                                                    </Border.Style>
-                                                    <Canvas >
-                                                        <ComboBox Height="22" HorizontalAlignment="Left" Margin="104,269,0,0"
-																x:Name="VidDvcsComboBox" VerticalAlignment="Top" Width="210" Visibility="Hidden" />
-                                                        <ComboBox Visibility="Hidden" Height="23" HorizontalAlignment="Left" Margin="105,302,0,0"
-																x:Name="AudDvcsComboBox" VerticalAlignment="Top" Width="209" />
-                                                        <Button x:Name="btnCapture" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}"  BorderThickness="0" Height="60" Width="78" Click="SnapshotButton_Click" >
-                                                            <Button.Background>
-                                                                <ImageBrush ImageSource="/KrausRGA;component/Images/iconcamera.png"/>
-                                                            </Button.Background>
-                                                            <Button.Foreground>
-                                                                <ImageBrush ImageSource="/KrausRGA;component/Images/iconcamera.png"/>
-                                                            </Button.Foreground>
-                                                        </Button>
-                                                        <TextBlock x:Name="tbkCapture" Text="Capture" TextAlignment="Center" Height="25" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White" FontSize="15"/>
-                                                    </Canvas>
-                                                </Border>
-                                                <Border x:Name="bdrStartCapture"  Visibility="Visible" BorderThickness="0" Height="71" Canvas.Top="30" Width="78" CornerRadius="10" Canvas.Left="10">
-                                                    <Border.Style>
-                                                        <Style TargetType="{x:Type Border}">
-                                                            <Style.Triggers>
-                                                                <Trigger Property="Visibility" Value="Hidden">
-                                                                    <Trigger.EnterActions>
-                                                                        <BeginStoryboard>
-                                                                            <Storyboard>
-                                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="10"  To="-90"/>
-                                                                            </Storyboard>
-                                                                        </BeginStoryboard>
-                                                                    </Trigger.EnterActions>
-                                                                </Trigger>
-                                                                <Trigger Property="Visibility" Value="Visible">
-                                                                    <Trigger.EnterActions>
-                                                                        <BeginStoryboard>
-                                                                            <Storyboard>
-                                                                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-90"  To="10"/>
-                                                                            </Storyboard>
-                                                                        </BeginStoryboard>
-                                                                    </Trigger.EnterActions>
-                                                                </Trigger>
-                                                            </Style.Triggers>
-                                                        </Style>
-                                                    </Border.Style>
-                                                    <Canvas Margin="2,12,-9,-17" >
-                                                        <Button x:Name="btnStartCapture" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0" Height="60" Width="78" Click="btnStartCapture_Click"  >
-                                                            <Button.Background>
-                                                                <ImageBrush ImageSource="/KrausRGA;component/Images/iconplay.png"/>
-                                                            </Button.Background>
-                                                            <Button.Foreground>
-                                                                <ImageBrush ImageSource="/KrausRGA;component/Images/iconplay.png"/>
-                                                            </Button.Foreground>
-                                                        </Button>
-                                                        <TextBlock x:Name="tbkStartCapture" Text="Start Camera" HorizontalAlignment="Center" Height="20" Width="85" Canvas.Top="56" Foreground="White" FontSize="15"/>
-                                                    </Canvas>
-                                                </Border>
-                                            </Canvas>
-                                            <ScrollViewer x:Name="sclPh" CanContentScroll="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Canvas.Left="416" Canvas.Top="24" Width="32" >
-                                                <StackPanel OverridesDefaultStyle="True" CanHorizontallyScroll="True" CanVerticallyScroll="True" Orientation="Horizontal"  x:Name="spPhotos" HorizontalAlignment="Left" Height="186" VerticalAlignment="Top" Width="829"/>
-                                            </ScrollViewer>
-                                            <Button Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" x:Name="brnCloseCamera" Content="Close Camera" Canvas.Left="488" 
-													Canvas.Top="166" Width="440" Height="108" RenderTransformOrigin="0.5,0.5" Background="#FFE07D1A" Foreground="White"
-													HorizontalAlignment="Right" FontSize="30" FontWeight="Bold" Click="brnCloseCamera_Click">
-                                                <Button.RenderTransform>
-                                                    <TransformGroup>
-                                                        <ScaleTransform/>
-                                                        <SkewTransform/>
-                                                        <RotateTransform Angle="89.854"/>
-                                                        <TranslateTransform/>
-                                                    </TransformGroup>
-                                                </Button.RenderTransform>
-                                            </Button>
-                                        </Canvas>
-                                    </Border>-->
-                                    <!-- Zoom image captured. -->
                                     <Border x:Name="bdrZoomImage" Canvas.Left="376" Canvas.Top="77" BorderThickness="2" Visibility="Hidden" CornerRadius="5" BorderBrush="#FF9B20E2" Height="317" Width="448">
                                         <Image Canvas.Left="417" Stretch="Fill"  Canvas.Top="130" x:Name="imgZoom" Visibility="Visible"  Margin="4"/>
                                     </Border>
